<?xml version="1.0"?>
<package format="2">
  <name>pickelhaube</name>
  <version>1.0.0</version>
  <description>driver for the 'pickelhaube' multisensor frame</description>
  <maintainer email="blumh@ethz.ch">Hermann Blum</maintainer>
  <author email="blumh@ethz.ch">Hermann Blum</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>image_proc</depend>
  <depend>tf2</depend>
  <depend>image_undistort</depend>

</package>
